--- a/coupon-event/build.gradle
+++ b/coupon-event/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
+    id "org.sonarqube" version "4.4.0.3356"
 }
 
 group = 'com.hcs'
@@ -38,21 +39,17 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
+sonar {
+    properties {
+        property 'sonar.host.url', 'http://150.230.252.178:9000'
+        property "sonar.token", "squ_a6bae554fae971d2154448dbabde5c4f69e0ed51"
+        property "sonar.projectKey", "project:product"
+        property 'sonar.projectName', 'product'
+        property 'sonar.java.source', 17
+        property 'encoding', 'UTF-8'
+        property 'charSet', 'UTF-8'
+    }
+}
 tasks.named('test') {
     useJUnitPlatform()
-}
-
-def querydslDir = "$buildDir/generated/querydsl"
-
-sourceSets {
-    main.java.srcDirs += [ querydslDir ]
-}
-
-tasks.withType(JavaCompile) {
-    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
-}
-
-clean.doLast {
-    file(querydslDir).deleteDir()
 }
