--- a/coupon-event/build.gradle
+++ b/coupon-event/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
-    id "org.sonarqube" version "4.4.0.3356"
+    id 'org.sonarqube' version '4.4.0.3356'
+    id 'jacoco'
 }
 
 group = 'com.hcs'
@@ -53,3 +54,12 @@ sonar {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.required = true
+    }
+}
+test.finalizedBy jacocoTestReport
