chore: add sonar exclusions

--- a/coupon-event/build.gradle
+++ b/coupon-event/build.gradle
@@ -51,7 +51,7 @@ sonar {
         property 'sonar.java.source', 17
         property 'encoding', 'UTF-8'
         property 'charSet', 'UTF-8'
-        property 'sonar.exclusions', '**/dto/**'
+        property 'sonar.exclusions', '**/dto/**','**/exception/**', '**/event/**','**/*Dto.java', '**/*Form.java'
     }
 }
 tasks.named('test') {
