--- a/coupon-event/build.gradle
+++ b/coupon-event/build.gradle
@@ -51,7 +51,8 @@ sonar {
         property 'sonar.java.source', 17
         property 'encoding', 'UTF-8'
         property 'charSet', 'UTF-8'
-        property 'sonar.exclusions', '**/dto/**,**/exception/**, **/event/**,**/*Dto.java,**/*Form.java'
+        property 'sonar.exclusions', '**/dto/**,**/exception/**, ' +
+                '**/event/**,**/*Dto.java,**/*Form.java, "**/*Application.java'
     }
 }
 tasks.named('test') {
