--- a/coupon-event/src/main/resources/application.yml
+++ b/coupon-event/src/main/resources/application.yml
@@ -37,9 +37,11 @@ server:
   tomcat:
     mbeanregistry:
       enabled: true
+  servlet:
+    session:
+      tracking-modes: cookie
 management:
   endpoints:
     web:
       exposure:
         include: "*"
-
