--- a/coupon-event/src/test/resources/application.yml
+++ b/coupon-event/src/test/resources/application.yml
@@ -15,6 +15,8 @@ spring:
           batch_size: 50
         order_updates: true
         order_inserts: true
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQLDialect
   sql:
     init:
       schema-locations: classpath:db/schema.sql
